--- a/chessGame.html
+++ b/chessGame.html
@@ -4,26 +4,20 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 
 <script id="vertex-shader" type="x-shader/x-vertex">
-
-attribute  vec4 a_vPosition;
-attribute  vec4 a_vColor;
-
-uniform mat4 u_modelViewMatrix;
-uniform mat4 u_projectionMatrix;
-
+attribute vec4 a_vPosition;
+attribute vec4 a_vColor;
 varying vec4 v_fColor;
+uniform mat4 u_ctMatrix;
 
-void main() 
+void main()
 {
-    v_fColor = a_vColor;
-    gl_Position = u_projectionMatrix * u_modelViewMatrix * a_vPosition;
-} 
+  gl_Position = u_ctMatrix * a_vPosition;
+  v_fColor = a_vColor;
+}
 </script>
 
 <script id="fragment-shader" type="x-shader/x-fragment">
-
 precision mediump float;
-
 varying vec4 v_fColor;
 
 void
@@ -36,15 +30,17 @@ main()
 <script type="text/javascript" src="../Common/webgl-utils.js"></script>
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MV.js"></script>
+<script type="text/javascript" src="trackball.js"></script>
 <script type="text/javascript" src="chessGame.js"></script>
 </head>
 
 <body>
-<canvas id="gl-canvas" width="640" height="640">
+<canvas id="gl-canvas" width="512" height="512">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 
-<p> </p>
+<br/>
+<button id="rotate">Rotate Board</button>
 
 </body>
 </html>
