Basic board with function outlines

--- a/chessGame.html
+++ b/chessGame.html
@@ -40,7 +40,7 @@ Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 
 <br/>
-<button id="rotate">Rotate Board</button>
+<button id="rotate">Rotate</button>
 
 </body>
 </html>
