--- a/chessGame.html
+++ b/chessGame.html
@@ -9,12 +9,24 @@ attribute vec4 a_vColor;
 varying vec4 v_fColor;
 uniform mat4 u_ctMatrix;
 
+
+uniform float u_theta;
 attribute  vec2 a_vTextureCoord;
 varying vec2 v_fTextureCoord;
 
+
 void main()
 {
-  gl_Position = u_ctMatrix * a_vPosition;
+
+  float s = sin(u_theta);
+  float c = cos(u_theta);
+
+  gl_Position.x = c * a_vPosition.x - s * a_vPosition.y;
+  gl_Position.y = s * a_vPosition.x + c * a_vPosition.y;
+  gl_Position.z = a_vPosition.z;
+  gl_Position.w = a_vPosition.w;
+
+  gl_Position = u_ctMatrix * gl_Position;
   v_fColor = a_vColor;
    v_fTextureCoord = a_vTextureCoord;
 }
@@ -53,6 +65,8 @@ main()
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 <img id = "texImage" src = "Chess_Board.png" hidden></img>
+<img id = "texImage2" src = "whiteMarble.png" hidden></img>
+<img id = "texImage3" src = "blackMarble.png" hidden></img>
 
 
 <div>
@@ -76,7 +90,7 @@ Oops ... your browser doesn't support the HTML5 canvas element
 </br>
 </br>
 Chess Piece-------Row-------Col</br>
-<select name="chess_piece" id="id_chess_piece" multiple>
+<select name="chess_piece" id="id_chess_piece">
   <option value="king">King</option>
   <option value="queen">Queen</option>
   <option value="bishop1">Bishop1</option>
@@ -96,7 +110,7 @@ Chess Piece-------Row-------Col</br>
 </select>
 ---------
 
-<select name="row" id="id_row" multiple>
+<select name="row" id="id_row">
   <option value=0>1</option>
   <option value=1>2</option>
   <option value=2>3</option>
@@ -108,7 +122,7 @@ Chess Piece-------Row-------Col</br>
 </select>
 
 -------
-<select name="col" id="id_col" multiple>
+<select name="col" id="id_col">
   <option value=0>1</option>
   <option value=1>2</option>
   <option value=2>3</option>
