--- a/chessGame.html
+++ b/chessGame.html
@@ -46,10 +46,10 @@ main()
     vec4 texColor;
     
     color = v_fColor;
-    //texColor = texture2D(u_textureSampler, v_fTextureCoord);
+    texColor = texture2D(u_textureSampler, v_fTextureCoord);
 	
-    //gl_FragColor = color * texColor;
-   gl_FragColor = color;
+    gl_FragColor = color * texColor;
+   //gl_FragColor = color;
 }
 </script>
 
