--- a/chessGame.html
+++ b/chessGame.html
@@ -46,10 +46,10 @@ main()
     vec4 texColor;
     
     color = v_fColor;
-    //texColor = texture2D(u_textureSampler, v_fTextureCoord);
+    texColor = texture2D(u_textureSampler, v_fTextureCoord);
 	
-    //gl_FragColor = color * texColor;
-   gl_FragColor = color;
+    gl_FragColor = color * texColor;
+   //gl_FragColor = color;
 }
 </script>
 
@@ -62,7 +62,8 @@ main()
 
 <body>
 <h1 id="whosTurn"></h1>
-<canvas id="gl-canvas" width="512" height="512">
+<canvas id="gl-canvas"  width="710" height="710">
+	
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 <img id = "texImage" src = "Chess_Board.png" hidden></img>
@@ -135,6 +136,17 @@ Chess Piece-------Row-------Col</br>
 </select>
 <button id = "submit">Submit</button>
 <button id = "moves">Check Moves</button>
+
+<br/>
+Change Background Color
+<select name="backgroundColor" id="backgroundColor">
+  <option value="green">green</option>
+  <option value="red">red</option>
+  <option value="blue">blue</option>
+  <option value="purple">purple</option>
+  <option value="gold">gold</option>
+</select>
+<button id = "changeColor">Submit</button>
 
 </body>
 </html>
